// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MultiSelect component with checkbox false should render correctly with all the props given 1`] = `
.c15 {
  font-size: 16px;
  cursor: inherit;
}

.c15 * {
  fill: #616161;
}

.c11 {
  font-size: 12px;
  cursor: pointer;
}

.c11 * {
  fill: #616161;
}

.c9 {
  font-size: 14px;
  font-weight: 400;
  color: inherit;
}

.c19 {
  font-size: 14px;
  font-weight: 400;
  color: grey;
}

.c7 {
  background-color: transparent;
  border: none;
  border-radius: 20px;
  padding: 3px 10px;
  margin: 2px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  max-width: -webkit-max-content;
  max-width: -moz-max-content;
  max-width: max-content;
  cursor: not-allowed;
  border: 1px solid #BDBDBD;
  background-color: #BDBDBD;
  color: #ffffff;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c7:focus {
  outline: none;
}

.c7 .c10 * {
  fill: #ffffff;
}

.c7 .c8 + .c10 {
  cursor: not-allowed;
  margin-left: 10px;
}

.c21 .c10 * {
  fill: #ffffff;
}

.c21 .c8 + .c10 {
  cursor: pointer;
  margin-left: 10px;
}

.c2 {
  font-size: 14px;
  font-weight: 400;
  color: #616161;
  margin: 0px 8px 0px 0px;
  cursor: default;
}

.c4 {
  grid-area: label;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c20 {
  grid-area: description;
  margin: 5px 0px 0px 2px;
  color: grey;
}

.c12 {
  margin: 8px 8px 8px 0px;
  display: inline-grid;
  grid-template-areas: 'label' 'field' 'description';
  grid-template-columns: auto;
  grid-template-areas: 'field' 'description';
}

.c12 .c25 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1 {
  margin: 8px 0px;
  display: grid;
  min-width: 300px;
  grid-template-columns: minmax(max-content,25%) minmax(auto,80%);
  grid-template-areas: 'label field' 'random description';
}

.c1 .c25 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c14 {
  padding: 8px;
  font-size: 14px;
  font-weight: 400;
  color: #616161;
  background-color: #E0E0E0;
  background-clip: padding-box;
  box-sizing: border-box;
  border: 1px solid #E0E0E0;
  border-radius: 5px;
  cursor: not-allowed;
}

.c14:focus {
  border-color: #012040;
  outline: 0;
}

.c14::-webkit-input-placeholder {
  color: #9E9E9E;
}

.c14::-moz-placeholder {
  color: #9E9E9E;
}

.c14:-ms-input-placeholder {
  color: #9E9E9E;
}

.c14::placeholder {
  color: #9E9E9E;
}

.c14::-webkit-file-upload-button {
  visibility: hidden;
}

.c18 {
  position: absolute;
  z-index: 1000;
  display: none;
  -webkit-transition: all 2ms ease-in-out;
  transition: all 2ms ease-in-out;
  border-radius: 4px;
  width: calc(100% - 0px);
}

.c5 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  -webkit-flex-direction: column-reverse;
  -ms-flex-direction: column-reverse;
  flex-direction: column-reverse;
}

.c5 .c17 {
  top: calc(100% + 5px);
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c22 .c0 {
  margin: 0px;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c22 .c0 .c13 {
  margin: 0px;
  border: none;
  background-color: transparent;
}

.c6 {
  border: 1px solid #E0E0E0;
  background-color: #E0E0E0;
  cursor: not-allowed;
  border-radius: 4px;
  box-sizing: border-box;
  overflow: hidden;
  min-width: 150px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  height: auto;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: calc(100% - 0px);
}

.c6 .c0 {
  margin: 0px;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c6 .c0 .c13 {
  margin: 0px;
  border: none;
  background-color: transparent;
}

.c6 * {
  cursor: not-allowed;
}

.c16 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  max-width: 20px;
  margin-right: 8px;
  font-size: 10px;
}

.c23 .c10 {
  width: 100%;
  height: 100%;
}

.c24 .c0 {
  width: calc(100% - 10px);
  margin: 0px;
  padding: 5px;
}

.c24 .c3 {
  margin-bottom: 0px;
}

.c24 .c3 .c0 {
  padding: 0px 5px 5px 0px;
}

.c24 .c25 .c0 {
  padding: 5px 5px 5px 0px;
}

<div>
  <div
    class="c0 c1"
    id="medly-multiSelect-field"
  >
    <label
      class="c2 c3 c4"
      for="medly-multiSelect"
    >
      Pharmacy
    </label>
    <div
      class="c5"
      id="medly-popover-wrapper"
    >
      <div
        class="c6"
        disabled=""
        id="medly-multiSelect-container"
      >
        <button
          class="c7"
          disabled=""
        >
          <span
            class="c8 c9"
          >
            All
          </span>
          <svg
            class="c10 c11"
            height="1em"
            viewBox="0 0 352 512"
            width="1em"
          >
            <path
              d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
              fill="currentColor"
            />
          </svg>
        </button>
        <div
          class="c0 c12"
          id="medly-multiSelect-input-field"
        >
          
          <input
            autocomplete="off"
            class="c13 c14"
            disabled=""
            id="medly-multiSelect-input"
            label=""
            placeholder="1 options selected"
            value=""
          />
          
        </div>
        <svg
          class="c10 c15 c16"
          height="1em"
          theme="[object Object]"
          viewBox="0 0 12 8"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9.88 1.29L6 5.17 2.12 1.29A.996.996 0 1 0 .71 2.7L5.3 7.29c.39.39 1.02.39 1.41 0L11.3 2.7a.996.996 0 0 0 0-1.41c-.39-.38-1.03-.39-1.42 0z"
          />
        </svg>
      </div>
      <div
        class="c17 c18"
        id="medly-multiSelect-popover"
        style="display: none;"
      />
    </div>
    <span
      class="c8 c19 c20"
    >
      We will show reports based on Pharmacy
    </span>
  </div>
</div>
`;

exports[`MultiSelect component with checkbox false should render correctly with default props 1`] = `
.c8 {
  font-size: 16px;
  cursor: inherit;
}

.c8 * {
  fill: #616161;
}

.c15 {
  font-size: 14px;
  font-weight: 400;
  color: inherit;
}

.c16 {
  font-size: 14px;
  font-weight: 700;
  color: inherit;
}

.c18 .c7 * {
  fill: #ffffff;
}

.c18 .c14 + .c7 {
  cursor: not-allowed;
  margin-left: 10px;
}

.c19 .c7 * {
  fill: #ffffff;
}

.c19 .c14 + .c7 {
  cursor: pointer;
  margin-left: 10px;
}

.c1 {
  margin: 8px 8px 8px 0px;
  display: inline-grid;
  grid-template-columns: minmax(max-content,25%) minmax(auto,80%);
  grid-template-areas: 'label field' 'random description';
  grid-template-columns: auto;
  grid-template-areas: 'field' 'description';
}

.c1 .c22 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c4 {
  margin: 8px 8px 8px 0px;
  display: inline-grid;
  grid-template-areas: 'label' 'field' 'description';
  grid-template-columns: auto;
  grid-template-areas: 'field' 'description';
}

.c4 .c22 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c6 {
  padding: 8px;
  font-size: 14px;
  font-weight: 400;
  color: #616161;
  background-color: #ffffff;
  background-clip: padding-box;
  box-sizing: border-box;
  border: 1px solid #E0E0E0;
  border-radius: 5px;
  cursor: inherit;
}

.c6:focus {
  border-color: #012040;
  outline: 0;
}

.c6::-webkit-input-placeholder {
  color: #9E9E9E;
}

.c6::-moz-placeholder {
  color: #9E9E9E;
}

.c6:-ms-input-placeholder {
  color: #9E9E9E;
}

.c6::placeholder {
  color: #9E9E9E;
}

.c6::-webkit-file-upload-button {
  visibility: hidden;
}

.c11 {
  position: absolute;
  z-index: 1000;
  display: none;
  -webkit-transition: all 2ms ease-in-out;
  transition: all 2ms ease-in-out;
  border-radius: 4px;
  width: calc(100% - 0px);
}

.c2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  -webkit-flex-direction: column-reverse;
  -ms-flex-direction: column-reverse;
  flex-direction: column-reverse;
}

.c2 .c10 {
  top: calc(100% + 5px);
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c3 {
  border: 1px solid #E0E0E0;
  background-color: #ffffff;
  cursor: pointer;
  border-radius: 4px;
  box-sizing: border-box;
  overflow: hidden;
  min-width: 150px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  height: auto;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3 .c0 {
  margin: 0px;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c3 .c0 .c5 {
  margin: 0px;
  border: none;
  background-color: transparent;
}

.c3 * {
  cursor: pointer;
}

.c20 .c0 {
  margin: 0px;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c20 .c0 .c5 {
  margin: 0px;
  border: none;
  background-color: transparent;
}

.c9 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  max-width: 20px;
  margin-right: 8px;
  font-size: 10px;
}

.c21 .c7 {
  width: 100%;
  height: 100%;
}

.c12 {
  list-style: none;
  padding: 0px;
  margin: 0px;
  max-height: 200px;
  overflow: auto;
  border: 1px solid #E0E0E0;
  background-color: #ffffff;
  box-sizing: border-box;
  border-radius: 4px;
}

.c12 .c0 {
  width: calc(100% - 10px);
  margin: 0px;
  padding: 5px;
}

.c12 .c23 {
  margin-bottom: 0px;
}

.c12 .c23 .c0 {
  padding: 0px 5px 5px 0px;
}

.c12 .c22 .c0 {
  padding: 5px 5px 5px 0px;
}

.c13 {
  cursor: pointer;
  padding: 5px;
  color: inherit;
  background-color: #ffffff;
}

.c13:last-child {
  border-bottom-left-radius: 3px;
  border-bottom-right-radius: 3px;
}

.c13:first-child {
  border-top-left-radius: 3px;
  border-top-right-radius: 3px;
}

.c17 {
  cursor: pointer;
  padding: 5px 5px 5px 15px;
  color: inherit;
  background-color: #ffffff;
}

.c17:last-child {
  border-bottom-left-radius: 3px;
  border-bottom-right-radius: 3px;
}

.c17:first-child {
  border-top-left-radius: 3px;
  border-top-right-radius: 3px;
}

<div>
  <div
    class="c0 c1"
    id="medly-multiSelect-field"
  >
    
    <div
      class="c2"
      id="medly-popover-wrapper"
    >
      <div
        class="c3"
        id="medly-multiSelect-container"
      >
        <div
          class="c0 c4"
          id="medly-multiSelect-input-field"
        >
          
          <input
            autocomplete="off"
            class="c5 c6"
            id="medly-multiSelect-input"
            label=""
            placeholder="Please Select . . ."
            value=""
          />
          
        </div>
        <svg
          class="c7 c8 c9"
          height="1em"
          theme="[object Object]"
          viewBox="0 0 12 8"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9.88 1.29L6 5.17 2.12 1.29A.996.996 0 1 0 .71 2.7L5.3 7.29c.39.39 1.02.39 1.41 0L11.3 2.7a.996.996 0 0 0 0-1.41c-.39-.38-1.03-.39-1.42 0z"
          />
        </svg>
      </div>
      <div
        class="c10 c11"
        id="medly-multiSelect-popover"
        style="display: none;"
      >
        <ul
          class="c12"
        >
          <li
            class="c13"
            label="All"
            value="all"
          >
            <span
              class="c14 c15"
            >
              All
            </span>
          </li>
          <li
            class="c13"
            label="Dummy1"
            value="Dummy1"
          >
            <span
              class="c14 c15"
            >
              Dummy1
            </span>
          </li>
          <li
            class="c13"
            label="Nested Options"
            value="[object Object],[object Object]"
          >
            <strong
              class="c14 c16"
            >
              Nested Options
            </strong>
          </li>
          <li
            class="c17"
            label="Dummy2"
            value="Dummy2"
          >
            <span
              class="c14 c15"
            >
              Dummy2
            </span>
          </li>
          <li
            class="c17"
            label="Dummy3"
            value="Dummy3"
          >
            <span
              class="c14 c15"
            >
              Dummy3
            </span>
          </li>
        </ul>
      </div>
    </div>
    
  </div>
</div>
`;

exports[`MultiSelect component with checkbox true should render correctly with all the props given 1`] = `
.c15 {
  font-size: 16px;
  cursor: inherit;
}

.c15 * {
  fill: #616161;
}

.c11 {
  font-size: 12px;
  cursor: pointer;
}

.c11 * {
  fill: #616161;
}

.c9 {
  font-size: 14px;
  font-weight: 400;
  color: inherit;
}

.c19 {
  font-size: 14px;
  font-weight: 400;
  color: grey;
}

.c7 {
  background-color: transparent;
  border: none;
  border-radius: 20px;
  padding: 3px 10px;
  margin: 2px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  max-width: -webkit-max-content;
  max-width: -moz-max-content;
  max-width: max-content;
  cursor: not-allowed;
  border: 1px solid #BDBDBD;
  background-color: #BDBDBD;
  color: #ffffff;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c7:focus {
  outline: none;
}

.c7 .c10 * {
  fill: #ffffff;
}

.c7 .c8 + .c10 {
  cursor: not-allowed;
  margin-left: 10px;
}

.c2 {
  font-size: 14px;
  font-weight: 400;
  color: #616161;
  margin: 0px 8px 0px 0px;
  cursor: default;
}

.c4 {
  grid-area: label;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c20 {
  grid-area: description;
  margin: 5px 0px 0px 2px;
  color: grey;
}

.c12 {
  margin: 8px 8px 8px 0px;
  display: inline-grid;
  grid-template-areas: 'label' 'field' 'description';
  grid-template-columns: auto;
  grid-template-areas: 'field' 'description';
}

.c12 .c24 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1 {
  margin: 8px 0px;
  display: grid;
  min-width: 300px;
  grid-template-columns: minmax(max-content,25%) minmax(auto,80%);
  grid-template-areas: 'label field' 'random description';
}

.c1 .c24 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c14 {
  padding: 8px;
  font-size: 14px;
  font-weight: 400;
  color: #616161;
  background-color: #E0E0E0;
  background-clip: padding-box;
  box-sizing: border-box;
  border: 1px solid #E0E0E0;
  border-radius: 5px;
  cursor: not-allowed;
}

.c14:focus {
  border-color: #012040;
  outline: 0;
}

.c14::-webkit-input-placeholder {
  color: #9E9E9E;
}

.c14::-moz-placeholder {
  color: #9E9E9E;
}

.c14:-ms-input-placeholder {
  color: #9E9E9E;
}

.c14::placeholder {
  color: #9E9E9E;
}

.c14::-webkit-file-upload-button {
  visibility: hidden;
}

.c18 {
  position: absolute;
  z-index: 1000;
  display: none;
  -webkit-transition: all 2ms ease-in-out;
  transition: all 2ms ease-in-out;
  border-radius: 4px;
  width: calc(100% - 0px);
}

.c5 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  -webkit-flex-direction: column-reverse;
  -ms-flex-direction: column-reverse;
  flex-direction: column-reverse;
}

.c5 .c17 {
  top: calc(100% + 5px);
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c21 .c0 {
  margin: 0px;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c21 .c0 .c13 {
  margin: 0px;
  border: none;
  background-color: transparent;
}

.c6 {
  border: 1px solid #E0E0E0;
  background-color: #E0E0E0;
  cursor: not-allowed;
  border-radius: 4px;
  box-sizing: border-box;
  overflow: hidden;
  min-width: 150px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  height: auto;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: calc(100% - 0px);
}

.c6 .c0 {
  margin: 0px;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c6 .c0 .c13 {
  margin: 0px;
  border: none;
  background-color: transparent;
}

.c6 * {
  cursor: not-allowed;
}

.c16 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  max-width: 20px;
  margin-right: 8px;
  font-size: 10px;
}

.c22 .c10 {
  width: 100%;
  height: 100%;
}

.c23 .c0 {
  width: calc(100% - 10px);
  margin: 0px;
  padding: 5px;
}

.c23 .c3 {
  margin-bottom: 0px;
}

.c23 .c3 .c0 {
  padding: 0px 5px 5px 0px;
}

.c23 .c24 .c0 {
  padding: 5px 5px 5px 0px;
}

<div>
  <div
    class="c0 c1"
    id="medly-multiSelect-field"
  >
    <label
      class="c2 c3 c4"
      for="medly-multiSelect"
    >
      Pharmacy
    </label>
    <div
      class="c5"
      id="medly-popover-wrapper"
    >
      <div
        class="c6"
        disabled=""
        id="medly-multiSelect-container"
      >
        <button
          class="c7"
          disabled=""
        >
          <span
            class="c8 c9"
          >
            All
          </span>
          <svg
            class="c10 c11"
            height="1em"
            viewBox="0 0 352 512"
            width="1em"
          >
            <path
              d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
              fill="currentColor"
            />
          </svg>
        </button>
        <div
          class="c0 c12"
          id="medly-multiSelect-input-field"
        >
          
          <input
            autocomplete="off"
            class="c13 c14"
            disabled=""
            id="medly-multiSelect-input"
            label=""
            placeholder="1 options selected"
            value=""
          />
          
        </div>
        <svg
          class="c10 c15 c16"
          height="1em"
          theme="[object Object]"
          viewBox="0 0 12 8"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9.88 1.29L6 5.17 2.12 1.29A.996.996 0 1 0 .71 2.7L5.3 7.29c.39.39 1.02.39 1.41 0L11.3 2.7a.996.996 0 0 0 0-1.41c-.39-.38-1.03-.39-1.42 0z"
          />
        </svg>
      </div>
      <div
        class="c17 c18"
        id="medly-multiSelect-popover"
        style="display: none;"
      />
    </div>
    <span
      class="c8 c19 c20"
    >
      We will show reports based on Pharmacy
    </span>
  </div>
</div>
`;

exports[`MultiSelect component with checkbox true should render correctly with default props 1`] = `
.c8 {
  font-size: 16px;
  cursor: inherit;
}

.c8 * {
  fill: #616161;
}

.c21 {
  font-size: 16px;
  cursor: pointer;
}

.c21 * {
  fill: #616161;
}

.c14 {
  font-size: 14px;
  font-weight: 400;
  color: #616161;
  margin: 0px 0px 0px 8px;
  cursor: pointer;
}

.c23 {
  font-size: 14px;
  font-weight: 400;
  color: #616161;
  margin: 0px 0px 8px 0px;
  cursor: default;
}

.c25 {
  grid-area: field;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-left: 17px;
}

.c16 {
  grid-area: label;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c1 {
  margin: 8px 8px 8px 0px;
  display: inline-grid;
  grid-template-columns: minmax(max-content,25%) minmax(auto,80%);
  grid-template-areas: 'label field' 'random description';
  grid-template-columns: auto;
  grid-template-areas: 'field' 'description';
}

.c1 .c24 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c4 {
  margin: 8px 8px 8px 0px;
  display: inline-grid;
  grid-template-areas: 'label' 'field' 'description';
  grid-template-columns: auto;
  grid-template-areas: 'field' 'description';
}

.c4 .c24 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c13 {
  margin: 8px 8px 8px 0px;
  display: inline-grid;
  grid-template-columns: max-content minmax(max-content,25%);
  grid-template-areas: 'field label' 'description random';
}

.c13 .c24 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

.c22 {
  margin: 8px 0px;
  display: grid;
  grid-template-areas: 'label' 'field' 'description';
}

.c22 .c24 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c6 {
  padding: 8px;
  font-size: 14px;
  font-weight: 400;
  color: #616161;
  background-color: #ffffff;
  background-clip: padding-box;
  box-sizing: border-box;
  border: 1px solid #E0E0E0;
  border-radius: 5px;
  cursor: inherit;
}

.c6:focus {
  border-color: #012040;
  outline: 0;
}

.c6::-webkit-input-placeholder {
  color: #9E9E9E;
}

.c6::-moz-placeholder {
  color: #9E9E9E;
}

.c6:-ms-input-placeholder {
  color: #9E9E9E;
}

.c6::placeholder {
  color: #9E9E9E;
}

.c6::-webkit-file-upload-button {
  visibility: hidden;
}

.c11 {
  position: absolute;
  z-index: 1000;
  display: none;
  -webkit-transition: all 2ms ease-in-out;
  transition: all 2ms ease-in-out;
  border-radius: 4px;
  width: calc(100% - 0px);
}

.c2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  -webkit-flex-direction: column-reverse;
  -ms-flex-direction: column-reverse;
  flex-direction: column-reverse;
}

.c2 .c10 {
  top: calc(100% + 5px);
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c3 {
  border: 1px solid #E0E0E0;
  background-color: #ffffff;
  cursor: pointer;
  border-radius: 4px;
  box-sizing: border-box;
  overflow: hidden;
  min-width: 150px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  height: auto;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3 .c0 {
  margin: 0px;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c3 .c0 .c5 {
  margin: 0px;
  border: none;
  background-color: transparent;
}

.c3 * {
  cursor: pointer;
}

.c9 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  max-width: 20px;
  margin-right: 8px;
  font-size: 10px;
}

.c17 {
  width: 16px;
  height: 16px;
  position: relative;
  border: 1px solid #E0E0E0;
  background-color: #ffffff;
  border-radius: 15%;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c17:focus-within {
  box-shadow: 0 0 0 1pt #012040;
}

.c20 {
  width: 0;
  height: 0;
  z-index: 1;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c20 .c7 {
  width: 100%;
  height: 100%;
}

.c18 {
  opacity: 0;
  z-index: 2;
  position: absolute;
  width: 100%;
  height: 100%;
  margin: 0;
  cursor: pointer;
}

.c18:focus {
  outline: none;
}

.c18:disabled {
  cursor: not-allowed;
}

.c18:checked ~ .c19 {
  width: calc(70%);
  height: calc(70%);
  -webkit-transition: width 0.2s ease,height 0.2s ease;
  transition: width 0.2s ease,height 0.2s ease;
}

.c12 {
  list-style: none;
  padding: 0px;
  margin: 0px;
  max-height: 200px;
  overflow: auto;
  border: 1px solid #E0E0E0;
  background-color: #ffffff;
  box-sizing: border-box;
  border-radius: 4px;
}

.c12 .c0 {
  width: calc(100% - 10px);
  margin: 0px;
  padding: 5px;
}

.c12 .c15 {
  margin-bottom: 0px;
}

.c12 .c15 .c0 {
  padding: 0px 5px 5px 0px;
}

.c12 .c24 .c0 {
  padding: 5px 5px 5px 0px;
}

<div>
  <div
    class="c0 c1"
    id="medly-multiSelect-field"
  >
    
    <div
      class="c2"
      id="medly-popover-wrapper"
    >
      <div
        class="c3"
        id="medly-multiSelect-container"
      >
        <div
          class="c0 c4"
          id="medly-multiSelect-input-field"
        >
          
          <input
            autocomplete="off"
            class="c5 c6"
            id="medly-multiSelect-input"
            label=""
            placeholder="Please Select . . ."
            value=""
          />
          
        </div>
        <svg
          class="c7 c8 c9"
          height="1em"
          theme="[object Object]"
          viewBox="0 0 12 8"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9.88 1.29L6 5.17 2.12 1.29A.996.996 0 1 0 .71 2.7L5.3 7.29c.39.39 1.02.39 1.41 0L11.3 2.7a.996.996 0 0 0 0-1.41c-.39-.38-1.03-.39-1.42 0z"
          />
        </svg>
      </div>
      <div
        class="c10 c11"
        id="medly-multiSelect-popover"
        style="display: none;"
      >
        <ul
          class="c12"
        >
          <div
            class="c0 c13"
            id="All-checkbox"
          >
            <label
              class="c14 c15 c16"
              for="All"
            >
              All
            </label>
            <div
              class="c17"
            >
              <input
                class="c18"
                id="All"
                name="all"
                type="checkbox"
                value="all"
              />
              <div
                class="c19 c20"
              >
                <svg
                  class="c7 c21"
                  height="1em"
                  viewBox="0 0 18 14"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M6 11.17L1.83 7 .41 8.41 6 14 18 2 16.59.59z"
                    fill="none"
                    fill-rule="evenodd"
                  />
                </svg>
              </div>
            </div>
          </div>
          <div
            class="c0 c13"
            id="Dummy1-checkbox"
          >
            <label
              class="c14 c15 c16"
              for="Dummy1"
            >
              Dummy1
            </label>
            <div
              class="c17"
            >
              <input
                class="c18"
                id="Dummy1"
                name="Dummy1"
                type="checkbox"
                value="Dummy1"
              />
              <div
                class="c19 c20"
              >
                <svg
                  class="c7 c21"
                  height="1em"
                  viewBox="0 0 18 14"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M6 11.17L1.83 7 .41 8.41 6 14 18 2 16.59.59z"
                    fill="none"
                    fill-rule="evenodd"
                  />
                </svg>
              </div>
            </div>
          </div>
          <div
            class="c0 c22"
            id="Nested Options-checkboxGroup"
          >
            <label
              class="c23 c15 c16"
            >
              <div
                class="c0 c13"
                id="Nested Options-checkbox"
              >
                <label
                  class="c14 c15 c16"
                  for="Nested Options"
                >
                  Nested Options
                </label>
                <div
                  class="c17"
                >
                  <input
                    class="c18"
                    id="Nested Options"
                    type="checkbox"
                  />
                  <div
                    class="c19 c20"
                  >
                    <svg
                      class="c7 c21"
                      height="1em"
                      viewBox="0 0 18 14"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M6 11.17L1.83 7 .41 8.41 6 14 18 2 16.59.59z"
                        fill="none"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </div>
                </div>
              </div>
            </label>
            <div
              class="c24 c25"
            >
              <div
                class="c0 c13"
                id="Dummy2-checkbox"
              >
                <label
                  class="c14 c15 c16"
                  for="Dummy2"
                >
                  Dummy2
                </label>
                <div
                  class="c17"
                >
                  <input
                    class="c18"
                    id="Dummy2"
                    name="Dummy2"
                    type="checkbox"
                  />
                  <div
                    class="c19 c20"
                  >
                    <svg
                      class="c7 c21"
                      height="1em"
                      viewBox="0 0 18 14"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M6 11.17L1.83 7 .41 8.41 6 14 18 2 16.59.59z"
                        fill="none"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </div>
                </div>
              </div>
              <div
                class="c0 c13"
                id="Dummy3-checkbox"
              >
                <label
                  class="c14 c15 c16"
                  for="Dummy3"
                >
                  Dummy3
                </label>
                <div
                  class="c17"
                >
                  <input
                    class="c18"
                    id="Dummy3"
                    name="Dummy3"
                    type="checkbox"
                  />
                  <div
                    class="c19 c20"
                  >
                    <svg
                      class="c7 c21"
                      height="1em"
                      viewBox="0 0 18 14"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M6 11.17L1.83 7 .41 8.41 6 14 18 2 16.59.59z"
                        fill="none"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </ul>
      </div>
    </div>
    
  </div>
</div>
`;
